@@ -1,4 +1,4 @@
-#ident "$Id: cache.c,v 1.12 2005/02/06 06:00:53 raven Exp $"
+#ident "$Id: cache.c,v 1.13 2005/04/24 15:04:51 raven Exp $"
 /* ----------------------------------------------------------------------- *
  *   
  *  cache.c - mount entry cache management routines
@@ -18,7 +18,6 @@
 #include <malloc.h>
 #include <errno.h>
 #include <stdlib.h>
-#include <string.h>
 #include <unistd.h>
 #include <ctype.h>
 #include <syslog.h>
