@@ -1,4 +1,4 @@
-#ident "$Id: lookup_file.c,v 1.16 2005/04/06 15:14:23 raven Exp $"
+#ident "$Id: lookup_file.c,v 1.17 2005/04/24 15:04:51 raven Exp $"
 /* ----------------------------------------------------------------------- *
  *   
  *  lookup_file.c - module for Linux automount to query a flat file map
@@ -18,7 +18,6 @@
 #include <malloc.h>
 #include <errno.h>
 #include <stdlib.h>
-#include <string.h>
 #include <unistd.h>
 #include <time.h>
 #include <ctype.h>
