@@ -1,6 +1,7 @@
 ??/?/2005 autofs-4.1.5
 ----------------------
 - merge patch for intermitent mount failures (Chris Feist).
+- fix detection of multi-mount map entry.
 
 11/4/2005 autofs-4.1.4
 ----------------------
